# number_to_french_converter

./: .gitignore  README.md  pyproject.toml
number_to_french_converter/: constants.py  main.py  number_converter.py  number_parser.py  number_representation.py
tests/: test_number_converter.py
