[tool.poetry]
name = "number-to-french-converter"
version = "0.1.0"
description = ""
authors = ["TrungDinhT <dinhthanhtrung1996@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
"number_to_french_converter" = "number_to_french_converter.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
